--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@nestjs/typeorm": "^10.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
     "ramda": "^0.29.1",
     "reflect-metadata": "^0.1.13",
@@ -78,5 +82,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "volta": {
+    "node": "20.10.0",
+    "npm": "10.2.3"
   }
 }
