常用的全局共享模块（待补充 CQRS 的实例）

--- a/.development.env
+++ b/.development.env
@@ -1,4 +1,19 @@
-DATABASE_USER=test
-DATABASE_PASSWORD=test
-database.host = 3000
-env = fat
+NODE_ENV=development
+
+#== APP
+PORT=3000
+TRANSPORT_PORT=8080
+JWT_EXPIRATION_TIME=3600
+FALLBACK_LANGUAGE=en_US
+ENABLE_ORM_LOGS=true
+ENABLE_DOCUMENTATION=true
+API_VERSION=v1.0.0
+
+
+#== DB
+DB_TYPE=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3000
+DB_USERNAME=test
+DB_PASSWORD=12345678
+DB_DATABASE=test
